Update asset path

--- a/scores/index.html
+++ b/scores/index.html
@@ -8,7 +8,7 @@
       <title>vectorscores | Scores</title>
       <meta name="description" content="A new series of dynamic compositions.">
 
-      <link rel="stylesheet" type="text/css" href="/assets/css/page.css">
+      <link rel="stylesheet" type="text/css" href="assets/css/page.css">
       <link rel="canonical" href="http://vectorscores.org/scores/">
     </head>
         <body>
