--- a/scores/storyboard/index.html
+++ b/scores/storyboard/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Storyboard | vectorscores</title>
-        <link rel="stylesheet" href="/assets/css/score.css">
+        <link rel="stylesheet" href="assets/css/score.css">
     </head>
     <body class="score-set">
         <header id="score-header">
