--- a/scores/topographies-ii/walk-reveal/index.html
+++ b/scores/topographies-ii/walk-reveal/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>walk reveal | vectorscores</title>
-        <link rel="stylesheet" href="/assets/css/score.css">
-        <link rel="stylesheet" href="/assets/modules/bravura/styles.css">
+        <link rel="stylesheet" href="assets/css/score.css">
+        <link rel="stylesheet" href="assets/modules/bravura/styles.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -75,9 +75,9 @@
     </div>
 	
     </div>
-        <script src="/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
-    <script src="/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/assets/modules/dictionary/index.js" charset="utf-8"></script>
+        <script src="assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
+    <script src="assets/js/vectorscores.js" charset="utf-8"></script>
+    <script src="assets/modules/dictionary/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
