--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       <title>vectorscores | 404</title>
       <meta name="description" content="A new series of dynamic compositions.">
 
-      <link rel="stylesheet" type="text/css" href="/assets/css/page.css">
+      <link rel="stylesheet" type="text/css" href="assets/css/page.css">
       <link rel="canonical" href="http://vectorscores.org/404.html">
     </head>
         <body>
