--- a/scores/3d-object/index.html
+++ b/scores/3d-object/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>3D object | vectorscores</title>
-        <link rel="stylesheet" href="/assets/css/score.css">
+        <link rel="stylesheet" href="assets/css/score.css">
         
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -67,8 +67,8 @@
     </div>
 	
     </div>
-        <script src="/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
-    <script src="/assets/js/vectorscores.js" charset="utf-8"></script>
+        <script src="assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
+    <script src="assets/js/vectorscores.js" charset="utf-8"></script>
     
         <script src="index.js" charset="utf-8"></script>
     </body>
