--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>glob | vectorscores</title>
-        <link rel="stylesheet" href="/assets/css/score.css">
-        <link rel="stylesheet" href="/assets/modules/bravura/styles.css">
+        <link rel="stylesheet" href="assets/css/score.css">
+        <link rel="stylesheet" href="assets/modules/bravura/styles.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -131,9 +131,9 @@
 <form></div>
         </div>
     </div>
-        <script src="/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
-    <script src="/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/assets/modules/settings/number/index.js" charset="utf-8"></script><script src="/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script>
+        <script src="assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
+    <script src="assets/js/vectorscores.js" charset="utf-8"></script>
+    <script src="assets/modules/dictionary/index.js" charset="utf-8"></script><script src="assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="assets/modules/settings/number/index.js" charset="utf-8"></script><script src="assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
