--- a/scores/index.html
+++ b/scores/index.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="trigger">
-            <a class="page-link"  href="/vectorscores/about/">About</a><a class="page-link"  href="/vectorscores/performances/">Performances</a><a class="page-link" active href="/vectorscores/scores/">Scores</a>
+            <a class="page-link"  href="/vectorscores/about/">About</a><a class="page-link" active href="/vectorscores/scores/">Scores</a><a class="page-link"  href="/vectorscores/performances/">Performances</a>
             </div>
         </nav>
     </div>
