Deploy [ci skip]

--- a/scores/threads/index.html
+++ b/scores/threads/index.html
@@ -15,7 +15,7 @@
         <main>
             
             <ul class="work-list">
-                <li><a href="/vectorscores/scores/threads/death-rattle/" class="work-title">death rattle</a></li>
+                <li><a href="/vectorscores/scores/threads/death-rattle/" class="work-title">death rattle</a></li><li><a href="/vectorscores/scores/threads/bone-flute/" class="work-title">bone flute</a></li><li><a href="/vectorscores/scores/threads/dirge/" class="work-title">dirge</a></li>
             </ul>
         </main>
     </body>
