--- a/performances/index.html
+++ b/performances/index.html
@@ -14,7 +14,7 @@
         <body>
             <header class="site-header">
     <div class="wrapper">
-        <a class="site-title vectorscores" href="vectorscores/">vectorscores</a>
+        <a class="site-title vectorscores" href="/vectorscores/">vectorscores</a>
         <nav class="site-nav">
             <a href="#" class="menu-icon">
                 <svg viewBox="0 0 18 15">
@@ -25,7 +25,7 @@
             </a>
 
             <div class="trigger">
-            <a class="page-link"  href="/vectorscores/about/">About</a><a class="page-link"  href="/vectorscores/scores/">Scores</a><a class="page-link" active href="/vectorscores/performances/">Performances</a>
+            <a class="page-link"  href="/vectorscores/scores/">Scores</a><a class="page-link" active href="/vectorscores/performances/">Performances</a><a class="page-link"  href="/vectorscores/about/">About</a>
             </div>
         </nav>
     </div>
