Deploy [ci skip]

--- a/scores/topographies-ii/walk-reveal/index.html
+++ b/scores/topographies-ii/walk-reveal/index.html
@@ -6,7 +6,7 @@
         <title>walk reveal | vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  <link rel="stylesheet" href="../styles.css")}">
+  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
   <link rel="stylesheet" href="styles.css">
  
