--- a/scores/threads/bone-flute/index.html
+++ b/scores/threads/bone-flute/index.html
@@ -6,7 +6,7 @@
         <title>bone flute | vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  <link rel="stylesheet" href="../styles.css")}">
+  <link rel="stylesheet" href="../styles.css">
   
   <link rel="stylesheet" href="styles.css">
  
