--- a/scores/threads/dead-march/index.html
+++ b/scores/threads/dead-march/index.html
@@ -7,7 +7,7 @@
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  
+  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
