--- a/scores/threads/mauler/index.html
+++ b/scores/threads/mauler/index.html
@@ -72,7 +72,7 @@
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    
+    <script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
