Deploy [ci skip]

--- a/scores/threads/mauler/index.html
+++ b/scores/threads/mauler/index.html
@@ -54,7 +54,20 @@
         </svg>
     </button><!--
  --><input id="score-pointer" type="number" value="0" pattern="d*" readonly="true" title="Score pointer" /><!-- step="1" --><!--
- -->
+ --><button id="score-options-open" class="score-button" title="Score options">
+         <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+             <g id="score-options-icon">
+                 <path d="M17,10 L17,118.57"></path>
+                 <path d="M1.25,25.75 L32.75,25.75"></path>
+
+                 <path d="M64.24,10 L64.24,118.57"></path>
+                 <path d="M48.49,102.82 L79.99,102.82"></path>
+
+                 <path d="M111.48,10 L111.48,118.57"></path>
+                 <path d="M95.73,64.285 L127.23,64.285"></path>
+             </g>
+         </svg>
+    </button>
 </footer>
         <div id="score-modal-overlay" class="modal-overlay">
         <div id="score-info-modal" class="modal-content">
@@ -68,11 +81,19 @@
         <p></p>
 	
     </div>
-	
+	<div id="score-options-modal" class="modal-content">
+            <span id="score-options-close" class="modal-close">×</span>
+            <h2>Options</h2>
+            <div>
+<div>
+  <h4>WebSocket Connection:</h4>
+  <p id="ws-log"></p>
+</div></div>
+        </div>
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script>
+    <script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
