--- a/scores/swell/index.html
+++ b/scores/swell/index.html
@@ -77,7 +77,7 @@
             John Teske
             
         </p>
-	<p>for for any ensemble, (4+)</p>
+	<p>for any ensemble (4+)</p>
         <p></p>
 	
     </div>
