--- a/scores/index.html
+++ b/scores/index.html
@@ -90,10 +90,10 @@
         </td>
      </tr><tr class="work-list-row">
         <td>
-          <a href="/vectorscores/scores/swell/" class="work-title">swell</a>, for for any ensemble, (4+)
+          <a href="/vectorscores/scores/swell/" class="work-title">swell</a>, for any ensemble (4+)
         </td>
         <td class="work-list-duration">
-            
+            8&prime;20&Prime;
         </td>
         <td class="work-list-duration">
             
