--- a/scores/index.html
+++ b/scores/index.html
@@ -175,7 +175,7 @@
         </td>
      </tr><tr class="work-list-row">
         <td>
-          <a href="/vectorscores/scores/threads/" class="work-title">threads</a>, for any ensemble
+          <a href="/vectorscores/scores/intonations/" class="work-title">intonations</a>, for any ensemble
         </td>
         <td class="work-list-duration">
             
