--- a/scores/admin/index.html
+++ b/scores/admin/index.html
@@ -24,7 +24,7 @@
   <h4>WebSocket Connection:</h4>
   <p id="ws-log"></p>
 </div>
-      <button>/scores/adsr/</button><button>/scores/cell-branching/</button><button>/scores/dirge-march/</button><button>/scores/glob/</button><button>/scores/time-control/</button><button>/scores/topographies-ii/</button><button>/scores/topographies-ii/walk-reveal/</button><button>/scores/tutorial/</button><button>/scores/trashfire/</button><button>/scores/prelude/</button><button>/scores/intonations/chant/</button><button>/scores/intonations/threadshift/</button><button>/scores/intonations/mauler/</button><button>/scores/intonations/by-the-neck/</button><button>/scores/intonations/bone-flute/</button><button>/scores/intonations/blood-hearth/</button><button>/scores/intonations/brain-slap/</button><button>/scores/intonations/klaxon-wail/</button><button>/scores/intonations/papercut-butterflies/</button><button>/scores/intonations/death-rattle/</button><button>/scores/swell/</button><button>/scores/intonations/</button>
+      <button>/scores/intonations/bone-flute/</button><button>/scores/intonations/klaxon-wail/</button><button>/scores/intonations/papercut-butterflies/</button><button>/scores/intonations/death-rattle/</button><button>/scores/intonations/libera-me/</button><button>/scores/swell/</button><button>/scores/adsr/</button><button>/scores/intonations/mauler/</button><button>/scores/intonations/by-the-neck/</button><button>/scores/intonations/brain-slap/</button><button>/scores/intonations/blood-hearth/</button><button>/scores/intonations/threadshift/</button><button>/scores/prelude/</button>
     
         </main>
         <footer id="score-footer"><!--
