--- a/scores/intonations/index.html
+++ b/scores/intonations/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>intonations | vectorscores</title>
+        <title>intonations - vectorscores</title>
         <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
     </head>
     <body class="score-set">
