--- a/scores/intonations/threadshift/index.html
+++ b/scores/intonations/threadshift/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>threadshift | vectorscores</title>
+        <title>threadshift - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/cue/blink/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -93,7 +93,7 @@
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/cue/blink/index.js" charset="utf-8"></script>
+    <script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/cue/blink/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
