--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>vectorscores | 404</title>
+      <title>vectorscores - 404</title>
       <meta name="description" content="A new series of dynamic compositions.">
 
       <link rel="stylesheet" type="text/css" href="/vectorscores/assets/css/page.css">
