--- a/scores/3d-object/index.html
+++ b/scores/3d-object/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>3D object | vectorscores</title>
+        <title>3D object - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
+  <link rel="stylesheet" href="../styles.css">
   
   <link rel="stylesheet" href="styles.css">
  
