--- a/scores/admin/index.html
+++ b/scores/admin/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>admin | vectorscores</title>
+        <title>admin - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
-  
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
