--- a/scores/adsr/index.html
+++ b/scores/adsr/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ad;sr | vectorscores</title>
+        <title>ad;sr - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
-  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/cue/blink/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/x-by-duration/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/number/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/checkbox/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -182,7 +182,7 @@ D<i class="symbol">&#xe262;</i> for each note in the phrase.
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/cue/blink/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/x-by-duration/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/number/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/checkbox/index.js" charset="utf-8"></script>
+    <script src="/vectorscores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/cue/blink/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/x-by-duration/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/number/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/checkbox/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
