--- a/scores/cell-branching/index.html
+++ b/scores/cell-branching/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>cell branching | vectorscores</title>
+        <title>cell branching - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
-  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/pitch-class/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/radio/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/pitch-classes/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/trichords/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -145,7 +145,7 @@ The quarter rest is used generically to indicate the player should rest.
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/trichords/index.js" charset="utf-8"></script>
+    <script src="/vectorscores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/trichords/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
