--- a/scores/glob/index.html
+++ b/scores/glob/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>glob | vectorscores</title>
+        <title>glob - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
-  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/pitch-class/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/radio/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/number/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/pitch-classes/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -136,7 +136,7 @@
     </div>
         <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/number/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script>
+    <script src="/vectorscores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/number/index.js" charset="utf-8"></script><script src="/vectorscores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
