--- a/scores/swell/index.html
+++ b/scores/swell/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>swell | vectorscores</title>
+        <title>swell - vectorscores</title>
          
   <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-  
-  
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="/vectorscores/assets/modules/pitch-class/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/radio/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/number/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/settings/pitch-classes/styles.css"><link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
