--- a/scores/intonations/index.html
+++ b/scores/intonations/index.html
@@ -1,22 +1,1 @@
-
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>intonations - vectorscores</title>
-        <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-    </head>
-    <body class="score-set">
-        <header id="score-header">
-        <h1 class="score-title">intonations</h1>
-        
-    </header>
-        <main>
-            
-            <ul class="work-list">
-                <li><a href="/vectorscores/scores/intonations/blood-hearth/" class="work-title">blood on the hearth</a></li><li><a href="/vectorscores/scores/intonations/bone-flute/" class="work-title">bone flute</a></li><li><a href="/vectorscores/scores/intonations/brain-slap/" class="work-title">brain slap</a></li><li><a href="/vectorscores/scores/intonations/by-the-neck/" class="work-title">by the fucking neck</a></li><li><a href="/vectorscores/scores/intonations/death-rattle/" class="work-title">death rattle</a></li><li><a href="/vectorscores/scores/intonations/klaxon-wail/" class="work-title">klaxon wail</a></li><li><a href="/vectorscores/scores/intonations/libera-me/" class="work-title">libera me</a></li><li><a href="/vectorscores/scores/intonations/mauler/" class="work-title">mauler</a></li><li><a href="/vectorscores/scores/intonations/papercut-butterflies/" class="work-title">papercut butterflies</a></li><li><a href="/vectorscores/scores/intonations/threadshift/" class="work-title">threadshift</a></li>
-            </ul>
-        </main>
-    </body>
-    </html>
+TODO
