--- a/scores/admin/index.html
+++ b/scores/admin/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>admin - vectorscores</title>
          
-  <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
+  <link rel="stylesheet" href="/scores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="/vectorscores/assets/modules/websockets/styles.css">
+  <link rel="stylesheet" href="/scores/assets/modules/websockets/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -24,7 +24,7 @@
   <h4>WebSocket Connection:</h4>
   <p id="ws-log"></p>
 </div>
-      <button>/scores/adsr/</button><button>/scores/intonations/blood-hearth/</button><button>/scores/intonations/bone-flute/</button><button>/scores/intonations/brain-slap/</button><button>/scores/intonations/by-the-neck/</button><button>/scores/intonations/death-rattle/</button><button>/scores/intonations/klaxon-wail/</button><button>/scores/intonations/libera-me/</button><button>/scores/intonations/mauler/</button><button>/scores/intonations/papercut-butterflies/</button><button>/scores/intonations/threadshift/</button><button>/scores/swell/</button><button>/scores/prelude/</button>
+      <button>/scores/intonations/blood-hearth/</button><button>/scores/intonations/bone-flute/</button><button>/scores/intonations/brain-slap/</button><button>/scores/intonations/by-the-neck/</button><button>/scores/intonations/death-rattle/</button><button>/scores/intonations/klaxon-wail/</button><button>/scores/intonations/libera-me/</button><button>/scores/intonations/mauler/</button><button>/scores/intonations/papercut-butterflies/</button><button>/scores/intonations/threadshift/</button><button>/scores/swell/</button><button>/scores/adsr/</button><button>/scores/prelude/</button>
     
         </main>
         <footer id="score-footer"><!--
@@ -94,9 +94,9 @@
             <div>noop</div>
         </div>
     </div>
-        <script src="/vectorscores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/vectorscores/assets/modules/websockets/index.js" charset="utf-8"></script>
+        <script src="/scores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
+    <script src="/scores/assets/js/vectorscores.js" charset="utf-8"></script>
+    <script src="/scores/assets/modules/websockets/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
