--- a/scores/topographies-ii/index.html
+++ b/scores/topographies-ii/index.html
@@ -1,22 +1,1 @@
-
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>topographies, book ii - vectorscores</title>
-        <link rel="stylesheet" href="/vectorscores/assets/css/score.css">
-    </head>
-    <body class="score-set">
-        <header id="score-header">
-        <h1 class="score-title">topographies, book ii</h1>
-        
-    </header>
-        <main>
-            
-            <ul class="work-list">
-                <li><a href="/vectorscores/scores/topographies-ii/walk-reveal/" class="work-title">walk reveal</a></li>
-            </ul>
-        </main>
-    </body>
-    </html>
+TODO
