--- a/intonations/bone-flute/index.html
+++ b/intonations/bone-flute/index.html
@@ -7,7 +7,7 @@
          
   <link rel="stylesheet" href="/scores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="/scores/assets/modules/websockets/styles.css"><link rel="stylesheet" href="/scores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/scores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/scores/assets/modules/line-cloud/styles.css">
+  <link rel="stylesheet" href="/scores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/scores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/scores/assets/modules/line-cloud/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -86,14 +86,14 @@
             <h2>Options</h2>
             <div>
 <div>
-  <h4>WebSocket Connection:</h4>
-  <p id="ws-log"></p>
+  <h4>WebSocket connection</h4>
+  <p>Not available</p>
 </div></div>
         </div>
     </div>
         <script src="/scores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/scores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/scores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/scores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/scores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/scores/assets/modules/line-cloud/index.js" charset="utf-8"></script>
+    <script src="/scores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/scores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/scores/assets/modules/line-cloud/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
