--- a/adsr/_options/index.html
+++ b/adsr/_options/index.html
@@ -11,6 +11,6 @@
  </form>
  
 <div>
-  <h4>WebSocket Connection:</h4>
-  <p id="ws-log"></p>
+  <h4>WebSocket connection</h4>
+  <p>Not available</p>
 </div>
