--- a/cell-branching/index.html
+++ b/cell-branching/index.html
@@ -7,7 +7,7 @@
          
   <link rel="stylesheet" href="/scores/assets/css/score.css">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="/scores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/scores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/scores/assets/modules/pitch-class/styles.css"><link rel="stylesheet" href="/scores/assets/modules/settings/radio/styles.css"><link rel="stylesheet" href="/scores/assets/modules/settings/pitch-classes/styles.css"><link rel="stylesheet" href="/scores/assets/modules/websockets/styles.css"><link rel="stylesheet" href="/scores/assets/modules/trichords/styles.css">
+  <link rel="stylesheet" href="/scores/assets/modules/bravura/styles.css"><link rel="stylesheet" href="/scores/assets/modules/dictionary/styles.css"><link rel="stylesheet" href="/scores/assets/modules/pitch-class/styles.css"><link rel="stylesheet" href="/scores/assets/modules/settings/radio/styles.css"><link rel="stylesheet" href="/scores/assets/modules/settings/pitch-classes/styles.css"><link rel="stylesheet" href="/scores/assets/modules/trichords/styles.css">
   <link rel="stylesheet" href="styles.css">
  
     </head>
@@ -138,14 +138,14 @@ The quarter rest is used generically to indicate the player should rest.
 </form>
 
 <div>
-  <h4>WebSocket Connection:</h4>
-  <p id="ws-log"></p>
+  <h4>WebSocket connection</h4>
+  <p>Not available</p>
 </div></div>
         </div>
     </div>
         <script src="/scores/assets/js/lib/d3.v4.min.js" charset="utf-8"></script>
     <script src="/scores/assets/js/vectorscores.js" charset="utf-8"></script>
-    <script src="/scores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/scores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/scores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/scores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/scores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script><script src="/scores/assets/modules/websockets/index.js" charset="utf-8"></script><script src="/scores/assets/modules/trichords/index.js" charset="utf-8"></script>
+    <script src="/scores/assets/modules/bravura/index.js" charset="utf-8"></script><script src="/scores/assets/modules/dictionary/index.js" charset="utf-8"></script><script src="/scores/assets/modules/pitch-class/index.js" charset="utf-8"></script><script src="/scores/assets/modules/settings/radio/index.js" charset="utf-8"></script><script src="/scores/assets/modules/settings/pitch-classes/index.js" charset="utf-8"></script><script src="/scores/assets/modules/trichords/index.js" charset="utf-8"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
     </html>
