--- a/admin/index.html
+++ b/admin/index.html
@@ -24,7 +24,7 @@
   <h4>WebSocket connection</h4>
   <p>Not available</p>
 </div>
-      <button>/scores/intonations/blood-hearth/</button><button>/scores/intonations/bone-flute/</button><button>/scores/intonations/brain-slap/</button><button>/scores/intonations/by-the-neck/</button><button>/scores/intonations/death-rattle/</button><button>/scores/intonations/klaxon-wail/</button><button>/scores/intonations/libera-me/</button><button>/scores/intonations/mauler/</button><button>/scores/intonations/papercut-butterflies/</button><button>/scores/intonations/threadshift/</button><button>/scores/swell/</button><button>/scores/adsr/</button><button>/scores/prelude/</button>
+      <button>/intonations/blood-hearth/</button><button>/intonations/bone-flute/</button><button>/intonations/brain-slap/</button><button>/intonations/by-the-neck/</button><button>/intonations/death-rattle/</button><button>/intonations/klaxon-wail/</button><button>/intonations/libera-me/</button><button>/intonations/mauler/</button><button>/intonations/papercut-butterflies/</button><button>/intonations/threadshift/</button><button>/swell/</button><button>/adsr/</button><button>/prelude/</button>
     
         </main>
         <footer id="score-footer"><!--
